// ---------------------------------------------------------------------------
// GENERATED FILE -- DO NOT EDIT.
//
// The IMPLEMENTED schema: what the migrations have actually built.
// For the full intended design, most of which is not built yet, see
// section 5.1 of docs/technical-design.md.
//
// Regenerate with:
//     python -m gpca_db.schema_docs > docs/schema.dbml
//
// Paste into https://dbdiagram.io to view it.
//
// Tables and relations only -- indexes and enum values are not shown.
// ---------------------------------------------------------------------------
// Alembic head: 0003_auth_tokens

Table auth_tokens {
  id uuid [pk]
  user_id uuid [not null]
  purpose auth_token_purpose [not null]
  token_hash bytea [not null]
  expires_at timestamptz [not null]
  consumed_at timestamptz
  created_at timestamptz [not null]
}

Table refresh_tokens {
  id uuid [pk]
  user_id uuid [not null]
  token_hash bytea [not null]
  family_id uuid [not null]
  issued_at timestamptz [not null]
  expires_at timestamptz [not null]
  revoked_at timestamptz
  replaced_by_id uuid
  user_agent varchar(400)
  ip inet
}

Table users {
  id uuid [pk]
  email citext [not null]
  password_hash text
  first_name varchar(100) [not null]
  last_name varchar(100) [not null]
  display_name varchar(150)
  role user_role [not null]
  status user_status [not null]
  token_version integer [not null]
  email_verified_at timestamptz
  phone varchar(20)
  city varchar(100)
  state_province varchar(100)
  state_code varchar(3)
  country_code varchar(2)
  member_since date
  last_login_at timestamptz
  deleted_at timestamptz
  created_at timestamptz [not null]
  updated_at timestamptz [not null]
}

Ref: auth_tokens.user_id > users.id
Ref: refresh_tokens.replaced_by_id > refresh_tokens.id
Ref: refresh_tokens.user_id > users.id
